update current progress page.

--- a/tex/progress.tex
+++ b/tex/progress.tex
@@ -1,3 +1,156 @@
 \chapter*{Current Progress}
+All mechanics questions are skipped. Legends for table are as below:
+\begin{center}
+    \begin{tabular}{c|c}
+        Symbol & Meaning                  \\
+        \hline
+        \tick  & Completed                \\
+        N/A    & Question does not exist  \\
+        Me     & Skipped due to mechanics
+    \end{tabular}
+\end{center}
 
-% TODO: Current Progress
+\clearpage
+\section*{Paper I}
+Progress: None.
+
+\begin{center}
+    \begin{tabular}{c|cccccccccccccccc}
+        Year & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12  & 13  & 14  & 15  & 16  \\
+        \hline
+        Spec &   &   &   &   &   &   &   &   &   &    &    &     &     &     &     &     \\
+        1987 &   &   &   &   &   &   &   &   &   &    &    &     &     &     &     &     \\
+        1988 &   &   &   &   &   &   &   &   &   &    &    &     &     &     &     &     \\
+        1989 &   &   &   &   &   &   &   &   &   &    &    &     &     &     &     &     \\
+        1990 &   &   &   &   &   &   &   &   &   &    &    &     &     &     &     &     \\
+        1991 &   &   &   &   &   &   &   &   &   &    &    &     &     &     &     &     \\
+        1992 &   &   &   &   &   &   &   &   &   &    &    &     &     &     &     &     \\
+        1993 &   &   &   &   &   &   &   &   &   &    &    &     &     &     &     &     \\
+        1994 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        1995 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        1996 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        1997 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        1998 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        1999 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        2000 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        2001 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        2002 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        2003 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        2004 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        2005 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        2006 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        2007 &   &   &   &   &   &   &   &   &   &    &    &     &     &     & N/A & N/A \\
+        2008 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2009 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2010 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2011 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2012 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2013 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2014 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2015 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2016 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2017 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2018 &   &   &   &   &   &   &   &   &   &    &    &     &     & N/A & N/A & N/A \\
+        2019 &   &   &   &   &   &   &   &   &   &    &    & N/A & N/A & N/A & N/A & N/A
+    \end{tabular}
+\end{center}
+
+\clearpage
+\section*{Paper II}
+Progress: Finished 2017 and 2018.
+
+\begin{center}
+    \begin{tabular}{c|cccccccccccccccc}
+        Year & 1     & 2     & 3     & 4     & 5     & 6     & 7     & 8     & 9  & 10 & 11 & 12    & 13    & 14  & 15  & 16  \\
+        \hline
+        Spec &       &       &       &       &       &       &       &       &    &    &    &       &       &     &     &     \\
+        1987 &       &       &       &       &       &       &       &       &    &    &    &       &       &     &     &     \\
+        1988 &       &       &       &       &       &       &       &       &    &    &    &       &       &     &     &     \\
+        1989 &       &       &       &       &       &       &       &       &    &    &    &       &       &     &     &     \\
+        1990 &       &       &       &       &       &       &       &       &    &    &    &       &       &     &     &     \\
+        1991 &       &       &       &       &       &       &       &       &    &    &    &       &       &     &     &     \\
+        1992 &       &       &       &       &       &       &       &       &    &    &    &       &       &     &     &     \\
+        1993 &       &       &       &       &       &       &       &       &    &    &    &       &       &     &     &     \\
+        1994 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        1995 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        1996 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        1997 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        1998 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        1999 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        2000 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        2001 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        2002 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        2003 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        2004 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        2005 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        2006 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        2007 &       &       &       &       &       &       &       &       &    &    &    &       &       &     & N/A & N/A \\
+        2008 &       &       &       &       &       &       &       &       &    &    &    &       &       & N/A & N/A & N/A \\
+        2009 &       &       &       &       &       &       &       &       &    &    &    &       &       & N/A & N/A & N/A \\
+        2010 &       &       &       &       &       &       &       &       &    &    &    &       &       & N/A & N/A & N/A \\
+        2011 &       &       &       &       &       &       &       &       &    &    &    &       &       & N/A & N/A & N/A \\
+        2012 &       &       &       &       &       &       &       &       &    &    &    &       &       & N/A & N/A & N/A \\
+        2013 &       &       &       &       &       &       &       &       &    &    &    &       &       & N/A & N/A & N/A \\
+        2014 &       &       &       &       &       &       &       &       &    &    &    &       &       & N/A & N/A & N/A \\
+        2015 &       &       &       &       &       &       &       &       &    &    &    &       &       & N/A & N/A & N/A \\
+        2016 &       &       &       &       &       &       &       &       &    &    &    &       &       & N/A & N/A & N/A \\
+        2017 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me & \tick & \tick & N/A & N/A & N/A \\
+        2018 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me & \tick & \tick & N/A & N/A & N/A \\
+        2019 &       &       &       &       &       &       &       &       &    &    &    &       & N/A   & N/A & N/A & N/A \\
+        2020 &       &       &       &       &       &       &       &       &    &    &    &       & N/A   & N/A & N/A & N/A \\
+        2021 &       &       &       &       &       &       &       &       &    &    &    &       & N/A   & N/A & N/A & N/A \\
+        2022 &       &       &       &       &       &       &       &       &    &    &    &       & N/A   & N/A & N/A & N/A \\
+        2023 &       &       &       &       &       &       &       &       &    &    &    &       & N/A   & N/A & N/A & N/A \\
+        2024 &       &       &       &       &       &       &       &       &    &    &    &       & N/A   & N/A & N/A & N/A
+    \end{tabular}
+\end{center}
+
+\clearpage
+\section*{Paper III}
+Progress: Finished 2010 to 2019.
+
+\begin{center}
+    \begin{tabular}{c|cccccccccccccccc}
+        Year & 1     & 2     & 3     & 4     & 5     & 6     & 7     & 8     & 9  & 10 & 11    & 12    & 13    & 14  & 15  & 16  \\
+        \hline
+        Spec &       &       &       &       &       &       &       &       &    &    &       &       &       &     &     &     \\
+        1987 &       &       &       &       &       &       &       &       &    &    &       &       &       &     &     &     \\
+        1988 &       &       &       &       &       &       &       &       &    &    &       &       &       &     &     &     \\
+        1989 &       &       &       &       &       &       &       &       &    &    &       &       &       &     &     &     \\
+        1990 &       &       &       &       &       &       &       &       &    &    &       &       &       &     &     &     \\
+        1991 &       &       &       &       &       &       &       &       &    &    &       &       &       &     &     &     \\
+        1992 &       &       &       &       &       &       &       &       &    &    &       &       &       &     &     &     \\
+        1993 &       &       &       &       &       &       &       &       &    &    &       &       &       &     &     &     \\
+        1994 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        1995 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        1996 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        1997 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        1998 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        1999 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        2000 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        2001 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        2002 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        2003 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        2004 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        2005 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        2006 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        2007 &       &       &       &       &       &       &       &       &    &    &       &       &       &     & N/A & N/A \\
+        2008 &       &       &       &       &       &       &       &       &    &    &       &       &       & N/A & N/A & N/A \\
+        2009 &       &       &       &       &       &       &       &       &    &    &       &       &       & N/A & N/A & N/A \\
+        2010 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
+        2011 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
+        2012 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
+        2013 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
+        2014 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
+        2015 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
+        2016 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
+        2017 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
+        2018 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & Me    & \tick & \tick & N/A & N/A & N/A \\
+        2019 & \tick & \tick & \tick & \tick & \tick & \tick & \tick & \tick & Me & Me & \tick & \tick & N/A   & N/A & N/A & N/A \\
+        2020 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
+        2021 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
+        2022 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
+        2023 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A \\
+        2024 &       &       &       &       &       &       &       &       &    &    &       &       & N/A   & N/A & N/A & N/A
+    \end{tabular}
+\end{center}
