--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -118,6 +118,7 @@
 \newcommand{\GitHubHref}[2]{
     \href{https://github.com/#1/#2}{\faGithub\space #1/#2}
 }
+\newcommand{\tick}{\checkmark}
 
 % Title Page
 \newcommand{\MakeTitlePage}[4]{
