--- a/tex/2011/3/3.tex
+++ b/tex/2011/3/3.tex
@@ -82,7 +82,7 @@ for \(n = 0, 1, 2\) and \(\omega = \exp \left(\frac{2\pi i}{3}\right)\).
 
 Rearranging gives us
 \[
-    x = \frac{2 \left(2\omega^n - 2^\frac{1}{3}\right)}{\omega^n - 2^{\frac{1}{3}}}
+    x = \frac{2 \left(2\omega^n - 2^{\frac{1}{3}}\right)}{\omega^n - 2^{\frac{1}{3}}}
 \]
 
 When \(n = 0\), \(\omega^n = 1\), and hence
