fix #8: ticks now display properly. force entering maths mode for checkmarks.

--- a/eason.sty
+++ b/eason.sty
@@ -26,7 +26,7 @@
 \newcommand{\GitHubHref}[2]{
     \href{https://github.com/#1/#2}{\faGithub\space #1/#2}
 }
-\newcommand{\tick}{\checkmark}
+\newcommand{\tick}{\(\checkmark\)}
 
 % Title Page
 \newcommand{\MakeTitlePage}[4]{
