fix [Webpage] Header for ToC appears in current progress for paper 3 #9 by adding ifdefined to printing primary etoc

--- a/main.tex
+++ b/main.tex
@@ -14,9 +14,12 @@
 \include{\TexPath/preface}
 \include{\TexPath/progress}
 
-\thispagestyle{footerOnly}
-\etocsetnexttocdepth{1}
-\tableofcontents
+\ifdefined\HCode
+\else
+    \thispagestyle{footerOnly}
+    \etocsetnexttocdepth{1}
+    \tableofcontents
+\fi
 \etocsettocstyle{}{}
 
 \pagestyle{fancy}
