--- a/macros.tex
+++ b/macros.tex
@@ -77,11 +77,14 @@
 \newcommand{\bvect}[1]{\overrightarrow{#1}}
 
 % https://tex.stackexchange.com/a/28213
-\DeclareMathSymbol{\ii}{\mathalpha}{letters}{"10}
-\DeclareMathSymbol{\jj}{\mathalpha}{letters}{"11}
+% \DeclareMathSymbol{\ii}{\mathalpha}{letters}{"10}
+% \DeclareMathSymbol{\jj}{\mathalpha}{letters}{"11}
 
-\newcommand{\ihat}{\vect{\hat{\ii}}}
-\newcommand{\jhat}{\vect{\hat{\jj}}}
+% \newcommand{\ihat}{\vect{\hat{\ii}}}
+% \newcommand{\jhat}{\vect{\hat{\jj}}}
+
+\newcommand{\ihat}{\textbf{\^{ı}}}
+\newcommand{\jhat}{\textbf{\^{ȷ}}}
 \newcommand{\khat}{\vect{\hat{k}}}
 
 % Other Math Symbols
