--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
 \include{\TexPath/2017}
 \include{\TexPath/2018}
 \include{\TexPath/2019}
-% \include{\TexPath/2020}
+\include{\TexPath/2020}
 % \include{\TexPath/2021}
 % \include{\TexPath/2022}
 % \include{\TexPath/2023}
