--- a/tex/2018/2/13.tex
+++ b/tex/2018/2/13.tex
@@ -129,7 +129,7 @@ which gives
                   \right)^\intercal, & n = 0,            \\
                   \left(
                   \frac{1}{4} + \frac{1}{2^{n + 1}}, \frac{1}{4}, \frac{1}{4} - \frac{1}{2^{n + 1}}, \frac{1}{4}
-                  \right)^\intercal, & \text{otherwise.}
+                  \right)^\intercal, & \text{otherwise}.
               \end{cases}
           \]
 \end{enumerate}
